fixed spacing issue between elements on page

--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@
     --siteFont: 'Roboto', sans-serif;
     --displayFontSizes: 1.5rem;
     --currentPlayerColor: var(--playerX);
+    --spacing: 3.5rem;
 }
 
 body {
@@ -27,7 +28,7 @@ body {
 h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 3.5rem;
-    padding: 5rem 0rem;
+    padding: var(--spacing) 0rem;
 }
 
 .header {
@@ -41,6 +42,7 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: var(--spacing) 0rem;
 }
 
 .buttons button {
@@ -61,7 +63,7 @@ h1 {
 
 
 .container {
-    padding: 5rem 0rem;
+    padding: var(--spacing) 0rem;
     margin: 0 auto;
     display: grid;
     grid-template-columns: 33% 33% 33%;
@@ -101,6 +103,12 @@ h1 {
     font-family: var(--siteFont);
 }
 
+#announcer {
+    font-size: var(--displayFontSizes);
+    font-family: var(--siteFont);
+    padding: rem 0rem;
+}
+
 #instructions {
     display: none;
     border: 1px solid white;
@@ -133,7 +141,7 @@ h1 {
     height: 3.0rem;
     border: 1px solid white;
     font-size: 1rem;
-    margin: 0rem 2rem;
+    margin: var(--spacing) 0;
     border-radius: 5px;
 }
 
